BPER/DEVF/force-app/main/default/objects/GenesysSetting__c/GenesysSetting__c.object-meta.xml
<CustomObject>
    <label>Genesys Setting</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Genesys Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>