BPER/DEVF/force-app/main/default/objects/GenesysSetting__c/fields/CC_Limite_Max__c.field-meta.xml
<CustomField>
    <fullName>CC_Limite_Max__c</fullName>
    <label>Limite Massimo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>