BPER/DEVF/force-app/main/default/objects/GenesysSetting__c/fields/CC_Minuti_Ricontatto__c.field-meta.xml
<CustomField>
    <fullName>CC_Minuti_Ricontatto__c</fullName>
    <label>Minuti di ricontatto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>