BPER/DEVF/force-app/main/default/objects/GenesysSetting__c/fields/CC_Numero_tentativi__c.field-meta.xml
<CustomField>
    <fullName>CC_Numero_tentativi__c</fullName>
    <label>Numero tentativi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>