BPER/DEVF/force-app/main/default/objects/GenesysSetting__c/fields/G_MEDIA_TYPE__c.field-meta.xml
<CustomField>
    <fullName>G_MEDIA_TYPE__c</fullName>
    <label>Media Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>chat</fullName>
            </value>
            <value>
                <fullName>whatsapp</fullName>
            </value>
            <value>
                <fullName>other</fullName>
            </value>
            <value>
                <fullName>web</fullName>
            </value>
            <value>
                <fullName>unbluchat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>