BPER/DEVF/force-app/main/default/objects/GenesysSetting__c/fields/G_ModelloDiServizio__c.field-meta.xml
<CustomField>
    <fullName>G_ModelloDiServizio__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Modello di Servizio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>