BPER/DEVF/force-app/main/default/objects/GenesysSetting__c/fields/G_MotivoDiContatto__c.field-meta.xml
<CustomField>
    <fullName>G_MotivoDiContatto__c</fullName>
    <inlineHelpText>Motivi di Contatto del Case</inlineHelpText>
    <label>Motivo di Contatto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aggiunta carta prepagata in rubrica Smart</fullName>
            </value>
            <value>
                <fullName>Altri prodotti e servizi</fullName>
            </value>
            <value>
                <fullName>Attivazione carta</fullName>
            </value>
            <value>
                <fullName>Attivazione nuovo Internet Banking</fullName>
            </value>
            <value>
                <fullName>Blocco carta</fullName>
            </value>
            <value>
                <fullName>Blocco carta di debito Carige Cash</fullName>
            </value>
            <value>
                <fullName>Blocco credenziali di accesso</fullName>
            </value>
            <value>
                <fullName>Carte di pagamento</fullName>
            </value>
            <value>
                <fullName>Condizioni economiche</fullName>
            </value>
            <value>
                <fullName>Conto corrente</fullName>
            </value>
            <value>
                <fullName>Disposizioni trading Online</fullName>
            </value>
            <value>
                <fullName>Informazioni</fullName>
            </value>
            <value>
                <fullName>Informazioni carta</fullName>
            </value>
            <value>
                <fullName>Informazioni Polizza Sorriso</fullName>
            </value>
            <value>
                <fullName>Informazioni sugli investimenti</fullName>
            </value>
            <value>
                <fullName>Informazioni sui finanziamenti</fullName>
            </value>
            <value>
                <fullName>Internet Banking</fullName>
            </value>
            <value>
                <fullName>OFM</fullName>
            </value>
            <value>
                <fullName>Paga Poi</fullName>
            </value>
            <value>
                <fullName>Prestito Online</fullName>
            </value>
            <value>
                <fullName>Supporto app</fullName>
            </value>
            <value>
                <fullName>Supporto trading Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>