BPER/DEVF/force-app/main/default/objects/GenesysSetting__c/fields/G_PRIORITY__c.field-meta.xml
<CustomField>
    <fullName>G_PRIORITY__c</fullName>
    <label>Priorità Canale</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>