BPER/DEVF/force-app/main/default/objects/GenesysSetting__c/fields/G_SCHEDULE_GROUP_ID__c.field-meta.xml
<CustomField>
    <fullName>G_SCHEDULE_GROUP_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ID Scheduling Group Chat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>