BPER/DEVF/force-app/main/default/objects/GenesysSetting__c/fields/G_SKILL__c.field-meta.xml
<CustomField>
    <fullName>G_SKILL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Genesys Skill</label>
    <length>255</length>
    <type>Text</type>
</CustomField>