BPER/DEVF/force-app/main/default/objects/GenesysSetting__c/fields/S_MESSAGES_TIMEOUT__c.field-meta.xml
<CustomField>
    <fullName>S_MESSAGES_TIMEOUT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Timeout Sessione Messaging</label>
    <length>255</length>
    <type>Text</type>
</CustomField>