BPER/DEVF/force-app/main/default/objects/GenesysSetting__c/fields/S_OMNI_ID__c.field-meta.xml
<CustomField>
    <fullName>S_OMNI_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ID Presence Status Ready</label>
    <length>255</length>
    <type>Text</type>
</CustomField>