BPER/DEVF/force-app/main/default/objects/GenesysSetting__c/recordTypes/CC_Presa_Appuntamento.recordType-meta.xml
<RecordType>
    <fullName>CC_Presa_Appuntamento</fullName>
    <active>true</active>
    <label>Presa Appuntamento</label>
</RecordType>