BPER/DEVF/force-app/main/default/objects/GenesysSetting__c/recordTypes/Chat.recordType-meta.xml
<RecordType>
    <fullName>Chat</fullName>
    <active>true</active>
    <label>Chat</label>
</RecordType>