BPER/DEVF/force-app/main/default/objects/GenesysSetting__c/recordTypes/UnbluChat.recordType-meta.xml
<RecordType>
    <fullName>UnbluChat</fullName>
    <active>true</active>
    <description>Utilizzato per integrazione Unblu Chat</description>
    <label>Unblu Chat</label>
</RecordType>