BPER/DEVF/force-app/main/default/objects/GenesysSetting__c/recordTypes/Web.recordType-meta.xml
<RecordType>
    <fullName>Web</fullName>
    <active>true</active>
    <description>Canale Web-To-Case</description>
    <label>Web</label>
</RecordType>