BPER/DEVF/force-app/main/default/objects/GenesysSetting__c/recordTypes/Whatsapp.recordType-meta.xml
<RecordType>
    <fullName>Whatsapp</fullName>
    <active>true</active>
    <label>Whatsapp</label>
</RecordType>